ajustando bootstrap para deixar a pagina com melhor UX

--- a/eventos.html
+++ b/eventos.html
@@ -11,7 +11,7 @@
     <title>.: Event Dash :.</title>
 </head>
 
-<body onload="validaUser()">{
+<body onload="validaUser()">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
