--- a/alarmes.html
+++ b/alarmes.html
@@ -10,7 +10,7 @@
 <body onload="validaUser()">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 text-center mb-3 mt-3">
                 <button type="button" class="btn btn-primary" onclick="getAlarmes()">Mostrar Alarmes</button>
             </div>
         </div>
