atualizado arquitetura dos arquivos e adicionado estilo.css

--- a/html/eventos.html
+++ b/html/eventos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <script type="text/javascript" src="eventos.js"></script>
+        <script type="text/javascript" src="../JavaScript/eventos.js"></script>
     <title>.: Event Dash :.</title>
 </head>
 
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 mb-3">
                 <button type="button" class="btn btn-primary" onclick="gerarRelatorio()">Gerar Relatório</button>
             </div>
         </div>
