--- a/html/alarmes.html
+++ b/html/alarmes.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script type="text/javascript" src="alarmes.js"></script>
+    <script type="text/javascript" src="../JavaScript/alarmes.js"></script>
     <title>Document</title>
 </head>
 <body onload="validaUser()">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-12 text-center mb-3 mt-3">
-                <button type="button" class="btn btn-primary" onclick="getAlarmes()">Mostrar Alarmes</button>
+            <div class="col-12 text-center">
+                <h3>Relatorio de Alarmes</h3>
             </div>
         </div>
         <div id="alarme">
-            ** aqui fica os alarmes ***
+        </div>
+        <div class="row">
+            <div class="col-12 text-center mb-3 mt-3">
+                <button type="button" class="btn btn-primary" onclick="getAlarmes()" ondragenter="">Mostrar Alarmes</button>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
