--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="../JavaScript/index.js"></script>
     <title>.: EventDash :.</title>
 </head>
 <body>
-    <div class="container">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <div class="container div01">
         <!-- Titulo -->
         <div class ="row">
             <div class = "col-12 text-center">
