adicionando pagina de cadastros e ajustes no css

--- a/html/alarmes.html
+++ b/html/alarmes.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script type="text/javascript" src="../JavaScript/alarmes.js"></script>
-    <title>Document</title>
+    <title>Alarmes EventDash</title>
 </head>
 <body onload="validaUser()">
+    <link rel="stylesheet" href="../css/estilos.css">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center">
@@ -19,6 +20,7 @@
         <div class="row">
             <div class="col-12 text-center mb-3 mt-3">
                 <button type="button" class="btn btn-primary" onclick="getAlarmes()" ondragenter="">Mostrar Alarmes</button>
+                <button type="button" class="btn btn-primary" onclick="window.location.href='relatorios.html'" ondragenter="">Voltar</button>
             </div>
         </div>
     </div>
