--- a/html/eventos.html
+++ b/html/eventos.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload="validaUser()">
+    <link rel="stylesheet" href="../css/estilos.css">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
@@ -34,8 +35,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 mb-3">
+            <div class="col-6">
                 <button type="button" class="btn btn-primary" onclick="gerarRelatorio()">Gerar Relatório</button>
+            </div>
+            <div class="col-6">
+                <button type="button" class="btn btn-primary" onclick="window.location.href='relatorios.html'">Voltar</button>
             </div>
         </div>
 
