--- a/html/index.html
+++ b/html/index.html
@@ -22,11 +22,13 @@
               <input type="text" class="form-control" id="txtLogin" aria-describedby="emailHelp">
               <div id="emailHelp" class="form-text">Preste Atenção nas Políticas de Segurança da firma</div>
             </div>
-            <div class="mb-3">
+            <div class="mb-5">
               <label for="txtSenha" class="form-label">Sua Senha</label>
               <input type="password" class="form-control" id="txtSenha">
             </div>  
-            <button type="button" class="btn btn-primary" onclick="logar()">Enviar Dados</button>
+            <button type="button"  class="btn btn-primary" onclick="logar()">Enviar Dados</button> <br>
+            <button type="button"  class="btn btn-primary">Esqueceu sua senha? Ajuda está aqui!</button> <br>
+            <button type="button"  class="btn btn-primary" onclick="window.location.href='cadastro.html'">Ainda não tem acesso? Cadastre-se aqui :)</button>
             <div class="row">
                 <div class="col-12 text-center">
                     <h3 id="msg">...</h3>
