--- a/html/relatorios.html
+++ b/html/relatorios.html
@@ -8,9 +8,10 @@
     <title>.:Event Dash:.</title>
 </head>
 <body onload="carregaInfo()">
-    <div class="container">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <div class="container div01">
         <div class="row">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center div02">
                 <h3>Event Dashboard</h3>
             </div>
         </div>
@@ -23,8 +24,8 @@
             </div>
         </div>
 
-        <div class="row" id="seletor">
-            <div class="col-12">
+        <div class="row links01" id="seletor">
+            <div class="col-6">
                 <p><a href="alarmes.html">Relatório de Alarmes</a></p>
                 <p><a href="eventos.html">Relatório de Eventos</a></p>
             </div>
