fazendo a logica do cadastro

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -28,6 +28,10 @@
             <input type="email" class="form-control" id="txtEmail" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
+            <label for="txtRacf" class="form-label">Insira sua Racf</label>
+            <input type="text" class="form-control" id="txtRacf" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3">
             <label for="txtRamal" class="form-label">Insira seu Ramal</label>
             <input type="text" class="form-control" id="txtRamal" aria-describedby="emailHelp">
         </div>
