--- a/html/relatorios.html
+++ b/html/relatorios.html
@@ -16,10 +16,10 @@
             </div>
         </div>
         <div class="row">
-            <div id="fotoUser" class="col-sm-2 col-md-3 col-lg-3 col-xl-4">
+            <div id="fotoUser" class="col-xs-3 col-sm-3 col-md-3 col-lg-2 col-xl-2">
                 **Aqui vai a  foto do usuario**
             </div>
-            <div id="bioUser" class="col-xs-12 col-sm-10 col-md-9 col-lg-9 col-xl-8">
+            <div id="bioUser" class="col-xs-9 col-sm-9 col-md-9 col-lg-10 col-xl-10">
                 ** Aqui vai a biografia do usuario**
             </div>
         </div>
