adicionando pagina de alterar senha, e corrigindo validacoes

--- a/html/alarmes.html
+++ b/html/alarmes.html
@@ -15,7 +15,7 @@
                 <h3>Relatorio de Alarmes</h3>
             </div>
         </div>
-        <div id="alarme">
+        <div id="alarme" class="div01">
         </div>
         <div class="row">
             <div class="col-12 text-center mb-3 mt-3">
