--- a/html/eventos.html
+++ b/html/eventos.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div id="relatorio"> 
+        <div id="relatorio" class="div01"> 
 
         </div>
 
