--- a/html/esqueceu.html
+++ b/html/esqueceu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script type="text/javascript" src="../JavaScript/index.js"></script>
+    <script type="text/javascript" src="../JavaScript/esqueceu.js"></script>
     <title>.: EventDash :.</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <!-- Titulo -->
         <div class ="row">
             <div class = "col-12 text-center">
-                <h3>Sistema EventDash</h3>
+                <h3>Alterar Senha</h3>
             </div>
         </div>
         <!-- Enviar formulario -->
@@ -22,13 +22,19 @@
               <input type="text" class="form-control" id="txtLogin" aria-describedby="emailHelp">
               <div id="emailHelp" class="form-text">Preste Atenção nas Políticas de Segurança da firma</div>
             </div>
-            <div class="mb-5">
-              <label for="txtSenha" class="form-label">Sua Senha</label>
-              <input type="password" class="form-control" id="txtSenha">
-            </div>  
-            <button type="button"  class="btn btn-primary" onclick="logar()">Enviar Dados</button> <br>
-            <button type="button"  class="btn btn-primary"onclick="window.location.href='esqueceu.html'">Esqueceu sua senha? Ajuda está aqui!</button> <br>
-            <button type="button"  class="btn btn-primary" onclick="window.location.href='cadastro.html'">Ainda não tem acesso? Cadastre-se aqui :)</button>
+            <div class="mb-3">
+              <label for="txtOSenha" class="form-label">Sua antiga Senha</label>
+              <input type="password" class="form-control" id="txtOSenha">
+            </div>
+            <div class="mb-3">
+                <label for="txtNSenha" class="form-label">Digite a nova Senha</label>
+                <input type="password" class="form-control" id="txtNSenha">
+            </div>
+            <div class="mb-3">
+                <label for="txtRSenha" class="form-label">Redigite a nova Senha</label>
+                <input type="password" class="form-control" id="txtRSenha">
+            </div> 
+            <button type="button"  class="btn btn-primary" onclick="mudar()">Alterar senha</button> <br>
             <div class="row">
                 <div class="col-12 text-center">
                     <h3 id="msg"></h3>
